ros/ros2_ws/log/build_2023-07-21_10-13-50/tracking_sub/stdout_stderr.log
running develop
/usr/lib/python3/dist-packages/setuptools/command/easy_install.py:158: EasyInstallDeprecationWarning: easy_install command is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running egg_info
writing ../../build/tracking_sub/tracking_sub.egg-info/PKG-INFO
writing dependency_links to ../../build/tracking_sub/tracking_sub.egg-info/dependency_links.txt
writing entry points to ../../build/tracking_sub/tracking_sub.egg-info/entry_points.txt
writing requirements to ../../build/tracking_sub/tracking_sub.egg-info/requires.txt
writing top-level names to ../../build/tracking_sub/tracking_sub.egg-info/top_level.txt
reading manifest file '../../build/tracking_sub/tracking_sub.egg-info/SOURCES.txt'
writing manifest file '../../build/tracking_sub/tracking_sub.egg-info/SOURCES.txt'
running build
running build_py
copying tracking_sub/subscriber.py -> /ros2_ws/build/tracking_sub/build/lib/tracking_sub
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /ros2_ws/build/tracking_sub/build/lib/tracking_sub/subscriber.py -> /ros2_ws/install/tracking_sub/lib/python3.10/site-packages/tracking_sub
byte-compiling /ros2_ws/install/tracking_sub/lib/python3.10/site-packages/tracking_sub/publisher.py to publisher.cpython-310.pyc
  File "/ros2_ws/install/tracking_sub/lib/python3.10/site-packages/tracking_sub/publisher.py", line 13
    	def send(self,value)
    	                    ^
SyntaxError: expected ':'

byte-compiling /ros2_ws/install/tracking_sub/lib/python3.10/site-packages/tracking_sub/subscriber.py to subscriber.cpython-310.pyc
  File "/ros2_ws/install/tracking_sub/lib/python3.10/site-packages/tracking_sub/subscriber.py", line 10
    	def quaternion_to_forward_vector(PoseStamped pose):
    	                                             ^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/ros2_ws/install/tracking_sub/lib/python3.10/site-packages/tracking_sub-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/tracking_sub/tracking_sub.egg-info to /ros2_ws/install/tracking_sub/lib/python3.10/site-packages/tracking_sub-0.0.0-py3.10.egg-info
running install_scripts
Installing listener script to /ros2_ws/install/tracking_sub/lib/tracking_sub
Installing speed_pub script to /ros2_ws/install/tracking_sub/lib/tracking_sub
writing list of installed files to '/ros2_ws/build/tracking_sub/install.log'
